--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,10 +1,9 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-08 09:48:36
-# Total rules: 4984
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-14 08:46:46
+# Total rules: 4919
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
-.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -22,14 +21,10 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
-.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .2xbits.eu.org
-.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
-.3dns-4.adobe.com
-.3dns.adobe.com
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
@@ -91,7 +86,6 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
-.ad.eporner.com
 .ad.gmw.cn
 .ad.hpplay.cn
 .ad.imp.joins.com
@@ -128,7 +122,6 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
-.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -349,7 +342,6 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
-.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -468,10 +460,8 @@
 .api.edgeoffer.microsoft.com
 .api.iegadp.qq.com
 .api.jr.mi.com
-.api.miui.security.xiaomi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.optnmnstr.com
 .api.setting.intl.miui.com
 .api.sprig.com
 .api.stacksocial.com
@@ -536,6 +526,7 @@
 .auction-ads.wpscdn.cn
 .audid-api-sg.taobao.com
 .audid-api.taobao.com
+.audio-ak.cdn.spotify.com
 .audio.ali.xmcdn.com
 .aurora-d3.herokuapp.com
 .auth.be.sec.miui.com
@@ -671,51 +662,17 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
-.c.ar.msn.com
 .c.arstechnica.com
-.c.at.msn.com
 .c.baidu.com
-.c.be.msn.com
-.c.br.msn.com
-.c.ca.msn.com
-.c.cl.msn.com
-.c.de.msn.com
-.c.dk.msn.com
-.c.es.msn.com
-.c.fi.msn.com
-.c.fr.msn.com
 .c.gj.qq.com
-.c.gr.msn.com
-.c.hk.msn.com
-.c.id.msn.com
-.c.ie.msn.com
-.c.il.msn.com
-.c.in.msn.com
-.c.it.msn.com
-.c.jp.msn.com
-.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
-.c.my.msn.com
 .c.newyorker.com
-.c.nl.msn.com
-.c.no.msn.com
-.c.ph.msn.com
-.c.prodigy.msn.com
-.c.pt.msn.com
-.c.ru.msn.com
 .c.sayhi.360.cn
-.c.se.msn.com
-.c.sg.msn.com
-.c.th.msn.com
-.c.tr.msn.com
-.c.tw.msn.com
 .c.uaa.iqiyi.com
-.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
-.c.za.msn.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
@@ -813,7 +770,6 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
-.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cnzz.com
 .cnzz.mmstat.com
@@ -1875,6 +1831,7 @@
 .d3aicbrzoy14kh.cloudfront.net
 .d3akmxskpi6zai.cloudfront.net
 .d3alqb8vzo7fun.cloudfront.net
+.d3apzcqz3ghyay.cloudfront.net
 .d3asksgk2foh5m.cloudfront.net
 .d3b2hhehkqd158.cloudfront.net
 .d3b4u8mwtkp9dd.cloudfront.net
@@ -2278,6 +2235,7 @@
 .data.ubs.test.ajo.adobe.com
 .data.ultimate-success-emea.test.ajo.adobe.com
 .data.wunderman-email.cjm.adobe.com
+.datacollection.uve.weibo.com
 .datadog.pool.ntp.org
 .dataflow.biliapi.com
 .datax.baidu.com
@@ -2335,7 +2293,6 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
-.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -2391,6 +2348,7 @@
 .dihutyaiafuhr.cloudfront.net
 .dil4q0t0blrf8.cloudfront.net
 .dilvyi2h98h1q.cloudfront.net
+.dingwei.netease.com
 .diqftdf1fp8u.cloudfront.net
 .dir.minigame.qq.com
 .direct-events-collector.spot.im
@@ -2549,7 +2507,6 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
-.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2614,6 +2571,7 @@
 .dust-0001.delorazahnow.workers.dev
 .dutils.com
 .duu8lzqdm8tsz.cloudfront.net
+.duy1ol4n1csnp.cloudfront.net
 .duz64ud8y8urc.cloudfront.net
 .dv0uonokej56p.cloudfront.net
 .dv663fc06d35i.cloudfront.net
@@ -2695,7 +2653,6 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
-.edgecast-vod.yimg.com
 .edigitalsurvey.com
 .edith-seb.xiaohongshu.com
 .eduad.baidu.com
@@ -3089,6 +3046,7 @@
 .huaxiang.eastmoney.com
 .hudong.pl.youku.com
 .hui.sohu.com
+.huichuan-mc.sm.cn
 .huichuan.sm.cn
 .huodong.mi.com
 .huodong.pl.youku.com
@@ -3172,7 +3130,6 @@
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
-.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.126.net
@@ -3187,7 +3144,6 @@
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
-.in.yimg.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3264,7 +3220,6 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
-.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .kalstats.kaltura.com
@@ -3476,7 +3431,6 @@
 .metrics.mzstatic.com
 .metrics.npr.org
 .metrics.proquest.com
-.metrics.theatlantic.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -3504,6 +3458,7 @@
 .mistat.intl.xiaomi.com
 .mistat.rus.xiaomi.com
 .mistat.xiaomi.com
+.miui.security.xiaomi.com
 .mivideo.g.mi.com
 .mixer.sina.cn
 .mixpanel-proxy.coingecko.com
@@ -3527,7 +3482,6 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
-.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -3626,19 +3580,16 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nxet1.360doc.cn
-.nytadvertising.nytimes.com
 .o.lenovo.com
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
-.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3760,8 +3711,6 @@
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .pingback.sogou.com
-.pingfore.qq.com
-.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3808,7 +3757,6 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
-.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .projecta-common-1258344701.file.myqcloud.com
@@ -3869,10 +3817,8 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
-.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
-.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qubitanalytics.appspot.com
@@ -3896,12 +3842,9 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
-.rads.stackoverflow.com
-.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
-.rcm-images.amazon.com
 .rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
@@ -3939,7 +3882,6 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
-.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3979,7 +3921,6 @@
 .s.gxv.test.ajo.adobe.com
 .s.img.mix.sina.com.cn
 .s.lenovo.com
-.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -4071,7 +4012,6 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
-.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -4202,7 +4142,6 @@
 .stats.adobe.com
 .stats.bbc.co.uk
 .stats.blogger.com
-.stats.fastcompany.com
 .stats.kaltura.com
 .stats.miui.com
 .stats.nymag.com
@@ -4238,7 +4177,6 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
-.survey.china.alibaba.com
 .susapi.lenovomm.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
@@ -4317,13 +4255,13 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
 .tj.youzanyun.com
 .tk.baidu.com
 .tkweb.baidu.com
+.tlzqr.datadoghq.com
 .tma.snssdk.com
 .tmea116.oss-cn-beijing.aliyuncs.com
 .tmead.y.qq.com
@@ -4348,7 +4286,6 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
-.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -4436,7 +4373,6 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
-.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -4466,9 +4402,7 @@
 .union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
-.unityads.unity.cn
 .unityads.unity3d.com
-.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -4489,6 +4423,11 @@
 .userreporting.cloud.unity3d.com
 .usp1.baidu.com
 .utility.baidu.com
+.utiq.lamontagne.fr.cdn.cloudflare.net
+.utiq.larep.fr.cdn.cloudflare.net
+.utiq.le-pays.fr.cdn.cloudflare.net
+.utiq.lejdc.fr.cdn.cloudflare.net
+.utiq.lepopulaire.fr.cdn.cloudflare.net
 .utk.baidu.com
 .utp.ucweb.com
 .uu.qq.com
@@ -4508,6 +4447,7 @@
 .vhotwsh.video.qq.com
 .vibeaconstr.onezapp.com
 .video-ad.sm.cn
+.video-ak.cdn.spotify.com
 .video-analytics-api.cloudinary.com
 .video-dsp.pddpic.com
 .video-stats.video.google.com
@@ -4524,7 +4464,6 @@
 .visualscience.external.bbc.co.uk
 .vkcdnservice.appspot.com
 .vlive.qqvideo.tc.qq.com
-.voduscdn.azureedge.net
 .volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
@@ -4603,8 +4542,6 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
-.www.addtoany.com
-.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4658,6 +4595,7 @@
 .yuedu.iqiyi.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
+.yunxinfw.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
 .zeus-nevo.pages.dev
 .zhanzhang.baidu.com
@@ -4772,10 +4710,13 @@ d1oxlq5h9kq8q5.cloudfront.net
 d3ddidv77grh0f.cloudfront.net
 da.mmarket.com
 dflow.bz.mgtv.com
+dingwei.nos-jd.163yun.com
 dns.m.sm.cn
 dns.wechat.com
 download.wan.sohu.com
+dr.netease.im
 du.163.com
+edgecast-vod.yimg.com
 encounter.bz.mgtv.com
 err.taobao.com
 events-analytics.apple.com
@@ -4815,7 +4756,6 @@ hm.xiaomi.com
 httpdns.browser.miui.com
 httpdns.volces.com
 huawei.facebook.com
-huichuan-mc.sm.cn
 huodong.xiaomi.com
 huosai.xiaomi.com
 i.xiaomi.com
@@ -4857,7 +4797,6 @@ meihua.xiaomi.com
 mibi.api.xiaomi.com
 mibi.xiaomi.com
 micardapi.micloud.xiaomi.net
-mig.str.mdt.qq.com
 miniapp-ad.cdn.bcebos.com
 mis.migc.xiaomi.com
 misc.wcd.qq.com
@@ -4871,8 +4810,6 @@ msmetrics-test.ws.sonos.com
 mssp.baidu.com
 mtrace.amap.com
 mtrace.play.cp81.ott.cibntv.net
-mtt.eve.mdt.qq.com
-mtt.str.mdt.qq.com
 news-l.play.ott.video.qq.com
 news.l.qq.com
 nl.notice.iqiyi.com
@@ -4887,9 +4824,6 @@ optimus-ads-ykx.amap.com
 order.music.xiaomi.com
 ort-stsdk.vivo.com.cn
 ossgw.alicdn.com
-oth.eve.mdt.qq.com
-oth.str.mdt.qq.com
-oth.update.mdt.qq.com
 p.l.qq.com
 p2.l.qq.com
 paopao-monitor.iqiyi.com
@@ -4909,6 +4843,7 @@ proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
 qgnu18wo.sina.cn
 qiye.xiaomi.com
+qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 r.dmp.sina.cn
 r.dmp.sina.com.cn
