--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-14 08:46:46
-# Total rules: 4919
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-15 15:45:20
+# Total rules: 4920
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -3412,6 +3412,7 @@
 .mdevstat.qqlive.qq.com
 .mdt.qq.com
 .measure.office.com
+.measure.sanity.io
 .media.globalsign.com
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
