--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-19 13:00:57
-# Total rules: 4992
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-21 17:38:32
+# Total rules: 4995
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -25,8 +25,11 @@
 .2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .2xbits.eu.org
+.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
+.3dns-4.adobe.com
+.3dns.adobe.com
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
