--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-21 17:38:32
-# Total rules: 4995
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-22 08:21:49
+# Total rules: 4999
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -762,6 +762,7 @@
 .chaoku.oss-cn-chengdu.aliyuncs.com
 .chat1.jd.com
 .chatpush.miguvideo.com
+.check.tep.test.ajo.adobe.com
 .chia-lan.pp.ua
 .chiafarm.pp.ua
 .choice.microsoft.com
@@ -2255,10 +2256,12 @@
 .data.intl.miui.com
 .data.mail.contentauthenticity.adobe.com
 .data.mayo.test.ajo.adobe.com
+.data.messaging.paypal.com
 .data.mgtv.com
 .data.microsoft.com
 .data.msn.com
 .data.news.paypal.com
+.data.newsletter.paypal.com
 .data.petbarn.test.ajo.adobe.com
 .data.premierleague.test.ajo.adobe.com
 .data.rahu.test.ajo.adobe.com
@@ -4584,6 +4587,7 @@
 .website-security.rapidssl.com
 .webstat.ws.126.net
 .weishi.baidu.com
+.whatif.de.adobe.com
 .whatif.fr.adobe.com
 .whatif.it.adobe.com
 .whatif.nl.adobe.com
