--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-22 08:21:49
-# Total rules: 4999
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-23 10:13:27
+# Total rules: 5004
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -3501,7 +3501,6 @@
 .mihoutao1868.github.io
 .mime.baidu.com
 .mimg.126.net
-.mine.baidu.com
 .minfo.wps.cn
 .mini2015.qq.com
 .minidcsc.kugou.com
@@ -3825,6 +3824,7 @@
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
+.promotion-partner.kuaishou.com
 .propsid.b-cdn.net
 .proxy-skadnetwork.apple.com
 .proxy.advp.apple.com
@@ -4344,9 +4344,14 @@
 .tmfmazu.m.qq.com
 .tmfsdk.m.qq.com
 .tmfsdktcpv4.m.qq.com
+.tnc0-aliec2.zijieapi.com
+.tnc0-alisc1.zijieapi.com
+.tnc0-bjlgy.zijieapi.com
 .tnc3-aliec2.bytedance.com
 .tnc3-aliec2.snssdk.com
+.tnc3-aliec2.zijieapi.com
 .tnc3-alisc1.bytedance.com
+.tnc3-alisc1.snssdk.com
 .tnc3-alisc1.zijieapi.com
 .tnc3-alisc2.zijieapi.com
 .tnc3-bjlgy.bytedance.com
